--- a/_publications/2020-09-13-paper-qg.md
+++ b/_publications/2020-09-13-paper-qg.md
@@ -5,11 +5,10 @@ permalink: /publication/2020-09-13-paper-qg
 excerpt: ''
 date: 2020-09-13
 venue: 'Findings of EMNLP-2020'
-paperurl: ''
+paperurl: 'https://www.aclweb.org/anthology/2020.findings-emnlp.416.pdf'
 authors: 'Dan Su, Yan Xu, Wenliang Dai, Ziwei Ji, Tiezheng Yu, Pascale Fung'
-paper: TBC
+paper: 'https://www.aclweb.org/anthology/2020.findings-emnlp.416.pdf'
 code: https://github.com/HLTCHKUST/MulQG
-citation: ''
-show_year: true
+citation: 'Su, D., Xu, Y., Dai, W., Ji, Z., Yu, T., & Fung, P. (2020, November). Multi-hop Question Generation with Graph Convolutional Network. In Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing: Findings (pp. 4636-4647).'
 ---
 Multi-hop Question Generation (QG) aims to generate answer-related questions by aggregating and reasoning over multiple scattered evidence from different paragraphs. It is a more challenging yet under-explored task compared to conventional single-hop QG, where the questions are generated from the sentence containing the answer or nearby sentences in the same paragraph without complex reasoning. To address the additional challenges in multi-hop QG, we propose Multi-Hop Encoding Fusion Network for Question Generation (MulQG), which does context encoding in multiple hops with Graph Convolutional Network and encoding fusion via an Encoder Reasoning Gate. To the best of our knowledge, we are the first to tackle the challenge of multi-hop reasoning over paragraphs without any sentence-level information. Empirical results on HotpotQA dataset demonstrate the effectiveness of our method, in comparison with baselines on automatic evaluation metrics. Moreover, from the human evaluation, our proposed model is able to generate fluent questions with high completeness and outperforms the strongest baseline by 20.8% in the multi-hop evaluation.
